
Revision 0.5.1, released XX-11-2017
-----------------------------------

- CLI tools usage aligned with the Net-SNMP prototypes for
  mocking consistency

Revision 0.4.2, released 09-08-2017
-----------------------------------

- Harden values renderer against broken SNMP indices
- Bumped pysnmp dependency to 4.3.9
- Fixed crash on string value rendering due to improper
  low-level pyasn1 .prettyOut() call
- Source code PEP8'ed
- Author's e-mail changed, copyright extended towards 2017

Revision 0.4.1, released 12-02-2016
-----------------------------------

- Copyright notice added to non-trivial source code files.
- Fix to stray trailing OID lurking to snmp*walk.py output.
- Fix to __doc__ use in setup.py to make -O0 installation mode working.

Revision 0.4.0, released 28-09-2015
-----------------------------------

- All apps renamed into snmp*.py and moved to scripts/ directory
  for a more conventional layout.
- All apps updated to support the latest pysnmp Standard Applications API.
- Initial integration with the PySMI MIB compiler. The -P<x> option now
  partially supported. All tools try to download missing ASN.1 MIBs from 
  snmplabs.com web site by default.
- Conditional variable buildValueOnly replaced with two buildObjectName
  and buildValue at MibViewProxy.

Revision 0.3.4, released 05-10-2013
-----------------------------------

- License updated to vanilla BSD 2-Clause to ease package use
  (http://opensource.org/licenses/BSD-2-Clause).
- Upper level exception handling improved for all apps.
- Distribute is gone, switched to setuptools completely.
- Fix to config.addTargetAddr() invocation -- since pysnmp 4.2.3, reworked
  pysnmp LCD model does not require tagging transport address to bind it 
  with communityName. 

Revision 0.3.3, released 30-01-2013
-----------------------------------

- Tools will report pysnmp-apps package version along with pysnmp version
  being used.
- Package meta-information updated.