@@ -1,9 +1,4 @@
 #
-# This file is part of pysnmp-apps software.
-#
-# Copyright (c) 2005-2017, Ilya Etingof <etingof@gmail.com>
-# License: http://pysnmp.sf.net/license.html
-#
 # Copyright (c) 1998-2000 John Aycock
 #  
 # Permission is hereby granted, free of charge, to any person obtaining
